--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -4,8 +4,9 @@
   }
 
   .mentors-wrapper {
-    position: relative;
     background: #fff;
+    padding: 0 18px;
+    position: relative;
     transform: translateY(0);
     transition: transform 0.3s ease;
   }
@@ -18,9 +19,9 @@
 
 @media all and (min-width: 576px) {
   .mentors-wrapper {
-    padding-bottom: 30px;
-    margin-left: 276px;
     flex-grow: 1;
+    margin-left: 276px;
+    padding-bottom: 30px;
   }
   
   .mentors-cards {
